Another potential fix for images on mobile

--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -489,7 +489,7 @@ footer {
 }
 
 .storyImage {
-  width: 75%;
+  width: 65%;
   margin-bottom: 1.5%;
   display: flex;
   justify-content: center;
